[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/float_menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/frame_gui.tex" type="Texture" id=2]
[ext_resource path="res://resources/space.fnt" type="BitmapFont" id=3]
[ext_resource path="res://scripts/pause.gd" type="Script" id=4]
[ext_resource path="res://resources/pdark num.fnt" type="BitmapFont" id=5]
[ext_resource path="res://scripts/UI/scoreshow.gd" type="Script" id=6]
[ext_resource path="res://scripts/exit.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]

resource/name = "close"
length = 3.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("resume:rect/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect/size")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 323, 234 ), Vector2( 160, 155 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.5, 1.5, 2.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 263, 98 ), Vector2( 402, 202 ), Vector2( 402, 303 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect/scale")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 1.5, 2.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1.5, 0 ) ]
}

[sub_resource type="Animation" id=2]

length = 3.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect/size")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1, 2, 3 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 155 ), Vector2( 323, 155 ), Vector2( 323, 234 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("resume:rect/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 3, 3.5 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1, 2, 3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 500, 300 ), Vector2( 400, 175 ), Vector2( 247, 175 ), Vector2( 247, 111 ) ]
}

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="Node" type="Node"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="Patch9Frame" type="Patch9Frame" parent="."]

visibility/visible = false
rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 263.0
margin/top = 98.0
margin/right = 586.0
margin/bottom = 332.0
texture = ExtResource( 2 )
modulate = Color( 0.53125, 0.510498, 0.510498, 1 )
patch_margin/left = 80
patch_margin/top = 80
patch_margin/right = 80
patch_margin/bottom = 75

[node name="Panel" type="Panel" parent="Patch9Frame"]

visibility/behind_parent = true
visibility/blend_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -179.0
margin/top = -66.0
margin/right = 859.0
margin/bottom = 538.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Patch9Frame"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/close = SubResource( 1 )
"anims/patch open" = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="resume" type="Button" parent="Patch9Frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 93.0
margin/top = 89.0
margin/right = 231.0
margin/bottom = 145.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.789062, 0.789062, 0.789062, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "resume"
flat = false
script/script = ExtResource( 4 )

[node name="Label" type="Label" parent="Patch9Frame/resume"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = -41.0
margin/right = 154.0
margin/bottom = -25.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PASUED"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Label" parent="Patch9Frame/resume"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 66.0
margin/top = 42.0
margin/right = -13.0
margin/bottom = 7.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.90625, 0.785889, 0.850771, 1 )
text = "Score"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script/script = ExtResource( 6 )

[node name="menu" type="Button" parent="Patch9Frame/resume"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -32.0
margin/top = 33.0
margin/right = 167.0
margin/bottom = 89.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.789062, 0.789062, 0.789062, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Main Menu"
flat = false

[node name="quit" type="Button" parent="Patch9Frame/resume"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -32.0
margin/top = 63.0
margin/right = 167.0
margin/bottom = 119.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.789062, 0.789062, 0.789062, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false
script/script = ExtResource( 7 )

[connection signal="finished" from="Patch9Frame/AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]

[connection signal="pressed" from="Patch9Frame/resume" to="." method="_on_resume_pressed"]

[connection signal="visibility_changed" from="Patch9Frame/resume/Score" to="Patch9Frame/resume/Score" method="_on_Score_visibility_changed"]

[connection signal="pressed" from="Patch9Frame/resume/menu" to="." method="_on_menu_pressed"]


